wave form adicionada

--- a/style.css
+++ b/style.css
@@ -13,8 +13,14 @@ label {
     font-size: 1.2em;
 }
 
-audio {
+#waveform {
     margin-top: 20px;
     width: 100%;
-    max-width: 600px;
+    height: 200px;
+}
+
+button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 1em;
 }
